[package]
name = "supply_chain_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sled = "0.34"
sha2 = "0.10"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
