[package]
name = "supply_chain_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core blockchain deps
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sled = "0.34"
sha2 = "0.10"
chrono = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Web API
axum = "0.7"
tower = "0.4"

# Config file loader
toml = "0.8"
